# plute

./: .coveragerc  .gitignore  404.html  README.md  README.org  index.html  mkdocs.yml  plute-dev  pyproject.toml
.github/workflows/: main.yml
docs/: index.md
plute/: base.py  types.py
plute/text/features/: regex.py
plute/text/utils/: alternatives.py  utterances.py
search/: search_index.json
tests/: test_alternatives.py  test_plute.py  test_regex.py
