[tool.poetry]
name = "plute"
version = "0.1.0"
description = "Framework for building SLU systems"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pydash = "^4.7.6"
exegr = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^5.10.4"
mypy = "^0.770"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
pylint = "^2.5.0"
bandit = "^1.6.2"
vulture = "^1.4"
pytest-xdist = "^1.31.0"
mock = "^4.0.2"
mkdocs = "^1.1"
mkdocs-material = "^5.1.4"
pymdown-extensions = "^7.1"
autopep8 = "^1.5.2"
flake8-quotes = "^3.0.0"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
